--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Molpa tech news 
+title: Molpa | latest tech news 
 ---
 <h1>Hi, I'm proneon267.</h1>
 <p>Enjoy your visit here</p>
