--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 ---
 layout: default
-title: Molpa | Neon Tech News 
+title: Molpa | News
 ---
-<h1>Hi, I'm proneon267.</h1>
-<p>Enjoy your visit here</p>
+<h1>Molpa | News</h1>
 <div class="latest">
 <b>Latest Posts:</b>
 {% for post in site.posts %}
