--- a/contact/index.html
+++ b/contact/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-contactstatus: active
+contactstatus: c
 ---
 <h1> {{ page.title }} </h1>
 <h1>Hi, I'm proneon267 and this is molpa.</h1>
