--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@ homestatus: h
 <div class="latest">
 <b>Latest Posts:</b>
 {% for post in site.posts %}
+	{% for i in 5 %}
+	{% if i > 5 %}
+	{% break %}
+	{% endif %}
 	<li><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
 	<hr>
+	{% endfor %}
 {% endfor %}
 </div>
